ajustes nos captions

--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -175,11 +175,7 @@
           </tr>
           {% endif %}
       {% endfor %}
-      </tbody>
-      <caption style="text-align:right"><small><b>B</b>: Biblioteca | <b>S</b>: Servidor</small></caption>
-      </table>
-    </div>
-
+    {% include "tabelas_bottom.html" %}
   </div>
 
   <script>
