--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -74,11 +74,7 @@
           </td>
         </tr>
       {% endfor %}
-      {% comment %} Não mudar o caption para varias linhas pois o PDF será gerado errado {% endcomment %}
-      <caption style="text-align:right;"><small>{% for _,captions  in Conexao.papel.items %}<span style="white-space: nowrap;">{{captions.1}}: {{captions.0}}</span>{% if not forloop.last %} / {% endif %}{% endfor %}</small></caption>
-    </table> 
-    </div>
-
+    {% include "tabelas_bottom.html" %}
   </div>
 
   <br>
