--- a/projetos/templates/projetos/meuprojeto_estudantes.html
+++ b/projetos/templates/projetos/meuprojeto_estudantes.html
@@ -7,6 +7,7 @@
 
 {% block head %}
   {% load static %}
+  {% load certificados %}
   <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <style>
@@ -77,7 +78,7 @@
         {% endif %}
         {% endwith %}
 
-        {% with certificados=alocado.get_certificados %}
+        {% with certificados=alocado|get_certificados_est %}
         {% if certificados %}
         <div>
           <h5>
