model de user agora é independente

--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -7,14 +7,12 @@
 
 {% block head %}
   {% load static %}
-  {% load addstr %}
   {% load l10n %}
-
-  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
+  {% load addstr %}
+  {% load exibe_notas %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-colorschemes.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-trendline.min.js' %}"></script>
-
 {% endblock %}
 
 {% block content %}
@@ -62,7 +60,7 @@
                 {% if alocacoes %}
                     semestres = ""
                     {% for key, alocacoes_tmp in alocacoes.items %}
-                        var data{{key}} = [{% for alocacao in alocacoes_tmp %}{% with media=alocacao.get_media_alocacao %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
+                        var data{{key}} = [{% for alocacao in alocacoes_tmp %}{% with media=alocacao|get_media_alocacao %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
                                     {  x:{% if media.media %}{{media.media|unlocalize}}{% else%}0{% endif %},
                                        y:{% if alocacao.aluno.cr %}{{alocacao.aluno.cr|unlocalize}}{% else%}0{% endif %},
                                        i:{% if media.individual %}{{media.individual|unlocalize}}{% else%}0{% endif %},
@@ -88,7 +86,7 @@
                 {% endif %}
 
                 {% for curs, estud in estudantes.items %}
-                    var data_estudantes_{{curs.sigla}} = [{% for alocacao in estud %}{% with media=alocacao.get_media_alocacao %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
+                    var data_estudantes_{{curs.sigla}} = [{% for alocacao in estud %}{% with media=alocacao|get_media_alocacao %}{% if media.pesos == 1 and alocacao.aluno.cr > 0 %}
                                 {   x:{% if media.media %}{{media.media|unlocalize}}{% else%}0{% endif %},
                                     y:{% if alocacao.aluno.cr %}{{alocacao.aluno.cr|unlocalize}}{% else%}0{% endif %},
                                     i:{% if media.individual %}{{media.individual|unlocalize}}{% else%}0{% endif %},
